# hackernews-crawler

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
fixtures/: first_page.html
migrations/: 20230113140411_init.sql
proto/: hackernews_proxy.proto
src/: client.rs  hackernews_core.rs  hackernews_proxy_proto.rs  lib.rs
src/server/: api.rs  hackernews_scrapper.rs  main.rs  posts_storage.rs
